@@ -183,14 +183,31 @@
         <!-- Weather -->
         <value condition="[Window.IsVisible(weather) | [Window.IsVisible(Home) + String.IsEqual(Container(300).ListItem.Property(widget),Weather)]] + System.HasAddon(resource.images.weatherfanart.multi)">$INFO[Window(Weather).Property(Current.FanartCode),resource://resource.images.weatherfanart.multi/,/]</value>     
 
-        <!-- Fanart -->
+        <!-- Animated Fanart -->
         <value condition="Skin.HasSetting(SkinHelper.EnableAnimatedPosters) + !String.IsEmpty(ListItem.Art(animatedfanart))">$INFO[ListItem.Art(animatedfanart)]</value>
         <value condition="Skin.HasSetting(SkinHelper.EnableAnimatedPosters) + !String.IsEmpty(Container.ListItem.Art(animatedfanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302)">$INFO[Container.ListItem.Art(animatedfanart)]</value>
-        <value condition="System.HasAddon(script.artwork.helper) + Skin.HasSetting(SkinHelper.EnableExtraFanart) + !Window.IsVisible(Home) + Container.Content(tvshows) + !String.IsEmpty(ListItem.Art(fanart))">plugin://script.artwork.helper/multiimage/smartseries/?title=$INFO[ListItem.Title]</value>
-        <value condition="System.HasAddon(script.artwork.helper) + Skin.HasSetting(SkinHelper.EnableExtraFanart) + !Window.IsVisible(Home) + [Container.Content(seasons) | Container.Content(episodes)] + !String.IsEmpty(ListItem.Art(fanart))">plugin://script.artwork.helper/multiimage/smartseries/?title=$INFO[Container.ShowTitle]</value>
-        <value condition="System.HasAddon(script.artwork.helper) + Skin.HasSetting(SkinHelper.EnableExtraFanart) + !Window.IsVisible(Home) + !String.IsEmpty(ListItem.Art(fanart))">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[ListItem.Label]</value>
-        <value condition="System.HasAddon(script.artwork.helper) + Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302)">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[Container.ListItem.Label]&amp;&amp;containerid=</value>
+
+        <!-- Artwork Helper Extra Fanart -->
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !Window.IsVisible(Home) + System.HasAddon(script.artwork.helper) + [String.IsEqual(ListItem.DBTYPE,movie) | String.IsEqual(ListItem.DBTYPE,set) | String.IsEqual(ListItem.DBTYPE,musicvideo) | String.IsEqual(ListItem.DBTYPE,tvshow)] + !String.IsEmpty(ListItem.DBID)">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[ListItem.DBID]&amp;&amp;arttype=fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !Window.IsVisible(Home) + System.HasAddon(script.artwork.helper) + [String.IsEqual(ListItem.DBTYPE,season) | String.IsEqual(ListItem.DBTYPE,episode)] + !String.IsEmpty(ListItem.DBID)">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[ListItem.DBID]&amp;&amp;arttype=tvshow.fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !Window.IsVisible(Home) + System.HasAddon(script.artwork.helper) + String.IsEqual(ListItem.DBTYPE,artist)">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[ListItem.DBID]&amp;&amp;arttype=fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !Window.IsVisible(Home) + System.HasAddon(script.artwork.helper) + [String.IsEqual(ListItem.DBTYPE,album) | String.IsEqual(ListItem.DBTYPE,song)]">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[ListItem.DBID]&amp;&amp;arttype=artist.fanart</value>
+
+        <!-- Artwork Helper Extra Fanart Homescreen -->
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302) + System.HasAddon(script.artwork.helper) + Window.IsVisible(DialogVideoInfo.xml) + [String.IsEqual(ListItem.DBTYPE,movie) | String.IsEqual(ListItem.DBTYPE,set) | String.IsEqual(ListItem.DBTYPE,musicvideo) |  String.IsEqual(ListItem.DBTYPE,tvshow)]">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[ListItem.DBID]&amp;&amp;arttype=fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302) + System.HasAddon(script.artwork.helper) + Window.IsVisible(DialogVideoInfo.xml) + [String.IsEqual(ListItem.DBTYPE,season) | String.IsEqual(ListItem.DBTYPE,episode)]">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[ListItem.DBID]&amp;&amp;arttype=tvshow.fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302) + System.HasAddon(script.artwork.helper) + Window.IsVisible(DialogMusicInfo.xml) + String.IsEqual(ListItem.DBTYPE,artist)">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[ListItem.DBID]&amp;&amp;arttype=fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302) + System.HasAddon(script.artwork.helper) + Window.IsVisible(DialogMusicInfo.xml) + [String.IsEqual(ListItem.DBTYPE,album) | String.IsEqual(ListItem.DBTYPE,song)]">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[ListItem.DBID]&amp;&amp;arttype=artist.fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302) + System.HasAddon(script.artwork.helper) + [String.IsEqual(Container.ListItem.DBTYPE,movie) | String.IsEqual(Container.ListItem.DBTYPE,set) | String.IsEqual(Container.ListItem.DBTYPE,musicvideo) | String.IsEqual(Container.ListItem.DBTYPE,tvshow)] + !String.IsEmpty(Container.ListItem.DBID)">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[Container.ListItem.DBID]&amp;&amp;containerid=&amp;&amp;arttype=fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302) + System.HasAddon(script.artwork.helper) + [String.IsEqual(Container.ListItem.DBTYPE,season) | String.IsEqual(Container.ListItem.DBTYPE,episode)] + !String.IsEmpty(Container.ListItem.DBID)">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[Container.ListItem.DBID]&amp;&amp;containerid=&amp;&amp;arttype=tvshow.fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302) + System.HasAddon(script.artwork.helper) + [String.IsEqual(Container.ListItem.DBTYPE,season) | String.IsEqual(Container.ListItem.DBTYPE,episode)] + String.IsEmpty(Container.ListItem.DBID)">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[Container.ListItem.Label]&amp;&amp;containerid=&amp;&amp;arttype=tvshow.fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302) + System.HasAddon(script.artwork.helper) + [String.IsEqual(Container.ListItem.DBTYPE,album) | String.IsEqual(Container.ListItem.DBTYPE,song)]">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[Container.ListItem.DBID]&amp;&amp;containerid=&amp;&amp;arttype=artist.fanart</value>
+        <value condition="Skin.HasSetting(SkinHelper.EnableExtraFanart) + !String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302) + System.HasAddon(script.artwork.helper) + [String.IsEqual(Container.ListItem.DBTYPE,artist)]">plugin://script.artwork.helper/multiimage/listitem/?refresh=$INFO[Container.ListItem.DBID]&amp;&amp;containerid=&amp;&amp;arttype=fanart</value>
+
+        <!-- Skin Helper Extra Fanart -->
         <value condition="!String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Art.ExtraFanArt)) + Skin.HasSetting(SkinHelper.EnableExtraFanart) + [!Window.IsVisible(Home) | [Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302)]]">$INFO[Window(Home).Property(SkinHelper.ListItem.Art.ExtraFanArt)]</value>
+
+        <!-- Fanart -->
         <value condition="!String.IsEmpty(ListItem.Art(fanart))">$INFO[ListItem.Art(fanart)]</value>
         <value condition="!String.IsEmpty(Container.ListItem.Art(fanart)) + Window.IsVisible(Home) + !Control.HasFocus(300) + !Control.HasFocus(302)">$INFO[Container.ListItem.Art(fanart)]</value>
         <value condition="!String.IsEmpty(ListItem.Property(Fanart_Image))">$INFO[ListItem.Property(Fanart_Image)]</value>
